force-app/main/default/objects/Student_Bulk_Upload__c/fields/Batch_Id__c.field-meta.xml
<CustomField>
    <fullName>Batch_Id__c</fullName>
    <label>Batch Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>