force-app/main/default/objects/Student_Bulk_Upload__c/fields/ILT_Cass_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>ILT_Cass_Start_Date__c</fullName>
    <formula>ILT_Class__r.redwing__Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ILT Cass Start Date</label>
    <type>Date</type>
</CustomField>