force-app/main/default/objects/Student_Bulk_Upload__c/fields/Skedulo_Job_Status__c.field-meta.xml
<CustomField>
    <fullName>Skedulo_Job_Status__c</fullName>
    <formula>TEXT(ILT_Class__r.Skedulo_Job_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Skedulo Job Status</label>
    <type>Text</type>
</CustomField>