force-app/main/default/objects/Student_Bulk_Upload__c/fields/Voucher_User_Email__c.field-meta.xml
<CustomField>
    <fullName>Voucher_User_Email__c</fullName>
    <formula>Voucher__r.User__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Voucher User Email</label>
    <type>Text</type>
</CustomField>